--- a/source/assets/stylesheets/base/_colors.css.scss
+++ b/source/assets/stylesheets/base/_colors.css.scss
@@ -1,1 +1,7 @@
-$main-color: #efefef;
+$eye-catcher: rgb(0, 177, 255);
+$text: #000;
+$text-invert: #FFF;
+$light-text: #999;
+$top-border: #000;
+$light-grey: #f3f3f3;
+$form-error: red;
