--- a/source/index.haml
+++ b/source/index.haml
@@ -1,15 +1,25 @@
-- @title = "Index"
+.layout--full
+  .layout--full-box
+    Socialweb Development
+    Ralph Möcklinghoff
 
-.layout--header
-  .layout--header-inner
-    %h3.sample  Zurb Foundation 5 with Middleman
-    
-.layout--content
-  .layout--content-left
-    .sample--content
-      %h3#foo left
-      = link_to "Page 1", "/page-1.html"
-      
-  .layout--content-right
-    .sample--content
-      %h3 right
+.layout--visual
+  .layout--visual-box
+    %ul.layout--visual-images
+      %li= image_tag 'code.jpg'
+      %li= image_tag 'html.jpg'
+      %li= image_tag 'diagram.jpg'
+
+            
+  
+.layout--full
+  .layout--full-box Ich bin freiberuflicher Software- und Webentwickler aus Hamburg. Ich berate und entwickle Lösungen in den Bereichen Webanwendungen, Webseiten und  Social Media. Meine Schwerpunkte liegen auf Ruby on Rails, der Frontend Entwicklung (HTML5/CSS3, jQuery, Responsive Development), sowie Usability.
+  
+.layout--medium
+  .layout--medium-box Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. 
+  .layout--medium-box Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. 
+
+.layout--small
+  .layout--small-box Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+  .layout--small-box Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+  .layout--small-box Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
