--- a/source/layouts/layout.haml
+++ b/source/layouts/layout.haml
@@ -3,10 +3,11 @@
   %head
     %meta{charset: "utf-8"}
     %meta{content: "width=device-width, initial-scale=1.0", name: "viewport"}
-    %title= @title || "Middleman - Foundation 5"
+    %title= @title || "Webanwendungen - Webseiten -Social Media / Ralph M&ouml;cklinghoff - Hamburg"
     = stylesheet_link_tag "app"
     = javascript_include_tag "before"
   %body{class: page_classes}
+    = partial "navigation"
     = yield
     = partial "footer" 
     = javascript_include_tag  "all"
