More styles for index page

--- a/source/assets/stylesheets/app.css.scss
+++ b/source/assets/stylesheets/app.css.scss
@@ -27,4 +27,5 @@
 @import "base/typography";
 
 @import "modules/layout";
-@import "modules/sample";
+@import "modules/header";
+@import "modules/content";
