More Styles and data for index page

--- a/source/assets/stylesheets/base/_colors.css.scss
+++ b/source/assets/stylesheets/base/_colors.css.scss
@@ -1,8 +1,6 @@
-$eye-catcher: rgb(0, 177, 255);
+// ---------------------------------------------------------
+// !!! Note some colors are overwritten inside
+//     foundation_and_overwrites.scss
+// ---------------------------------------------------------
 
-$text: #000;
-$text-invert: #FFF;
-$light-text: #999;
-$top-border: #000;
-$light-grey: #f3f3f3;
-$form-error: red;
+$eye-catcher: #00b1ff;
