--- a/source/index.haml
+++ b/source/index.haml
@@ -51,8 +51,8 @@
                             :link_2 => "#{link_to('Foundation 5', 'http://foundation.zurb.com')}",
                             :link_3 => "#{link_to('SASS', 'http://sass-lang.com')}",
                             :link_4 => "#{link_to('HAML', 'http://haml.info')}",
-                            :link_5 => "#{link_to('GitHub', 'https://github.com/RalphAtHamburg/RalphAtHamburg')}",
-                            :link_5 => "#{link_to('Compass', 'http://compass-style.org')}" )
+                            :link_5 => "#{link_to('Compass', 'http://compass-style.org')}",
+                            :link_6 => "#{link_to('GitHub', 'https://github.com/RalphAtHamburg/RalphAtHamburg')}" )
       
     
     .content--headline-sub
