--- a/source/layouts/layout.haml
+++ b/source/layouts/layout.haml
@@ -4,7 +4,10 @@
     %meta{charset: "utf-8"}
     %meta{content: "width=device-width, initial-scale=1.0", name: "viewport"}
     %title= @title || "Webanwendungen - Webseiten -Social Media / Ralph M&ouml;cklinghoff - Hamburg"
-  
+    
+    // TODO made font-awesome running from bower_components
+    %link{href: "//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css", rel: "stylesheet"}/
+    
     %script{:src => "http://use.typekit.com/kmw2qfx.js"}
     :javascript
       try{Typekit.load();}catch(e){}
