--- a/source/partials/_footer.haml
+++ b/source/partials/_footer.haml
@@ -1,3 +1,3 @@
-.layout--full
-  .layout--full-box
-    Copyright #{copyright_years("2013")}
+.layout--footer
+  .layout--footer-box.footer
+    = t("footer.text", :date => "#{copyright_years("2001")}", :imprint => "#{link_to('Impressum', '/imprint.html')}")
