--- a/source/assets/stylesheets/base/_typography.css.scss
+++ b/source/assets/stylesheets/base/_typography.css.scss
@@ -4,9 +4,9 @@
 // ---------------------------------------------------------
 
 @mixin headline-font($font-size: rem-calc(32)) {
-  font-family: museo-slab, 'Lucida Grande', 'Lucida Sans Unicode', Arial, sans-serif;
+  font-family: sommet-rounded, 'Lucida Grande', 'Lucida Sans Unicode', Arial, sans-serif;
   font-size: $font-size;
-  font-weight: 300;
+  font-weight: 500;
 }
 
 @mixin copy-font($font-size: rem-calc(20)) {
