--- a/source/assets/stylesheets/modules/_blog.css.scss
+++ b/source/assets/stylesheets/modules/_blog.css.scss
@@ -23,7 +23,7 @@
 // Styles for the blog artivle which is markdown
 // ---------------------------------------------------------
 
-.markdown {
+.blog--markdown {
 
   ul {
     margin-left: 0; }
