--- a/source/index.haml
+++ b/source/index.haml
@@ -24,16 +24,16 @@
 .layout--medium
 
   .layout--medium-box
-    %section
+    %section.content--main
       %header
-        %h6= t("home.header_webapps")
-      %p= t("home.webapps")
+        %h6.content--main-headline= t("home.header_webapps")
+      %p.content--main-copy= t("home.webapps")
          
   .layout--medium-box
-    %section
+    %section.content--main
       %header
-        %h6= t("home.header_websites")
-      %p= t("home.websites")
+        %h6.content--main-headline= t("home.header_websites")
+      %p.content--main-copy= t("home.websites")
 
 -# ---------------------------------------------------------
 -# The bottom area with additional content for twitter
