--- a/source/partials/_header.haml
+++ b/source/partials/_header.haml
@@ -27,6 +27,6 @@
 .layout--full
   .layout--full-box
     .header--headline
-      socialweb development 
+      Webanwendungs- und Frontendentwicklung 
     .header--subheadline
       ralph möcklinghoff
