--- a/source/about.haml
+++ b/source/about.haml
@@ -4,11 +4,11 @@
   
   .layout--about-text 
   
-    %h6= t("about.header_me")
-    %p= t("about.me")
-    %h6= t("about.header_customer")
-    %p= t("about.customer")
-    %p= t("about.brands", :link_1 => "#{link_to('Inveos', 'http://middlemanapp.com')}",
+    %h6.content--main= t("about.header_me")
+    %p.content--main-copy= t("about.me")
+    %h6.content--main= t("about.header_customer")
+    %p.content--main-copy= t("about.customer")
+    %p.content--main-copy= t("about.brands", :link_1 => "#{link_to('Inveos', 'http://middlemanapp.com')}",
                           :link_2 => "#{link_to('zweitag', 'http://foundation.zurb.com')}",
                           :link_3 => "#{link_to('ANTS with FRIENDS', 'http://sass-lang.com')}",
                           :link_4 => "#{link_to('mee-moo', 'http://sass-lang.com')}",
